fixes best practice issue and horizontal lines not showing up in desktop

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -19,7 +19,7 @@
   display: block;
 }
 
-.dotw {
+.columns.dotw {
   background-color: #01A0C0;
   border-radius: 0.5rem;
   color: white;
@@ -27,7 +27,7 @@
   margin-block: 1rem;
 }
 
-.dotw p {
+.columns.dotw p {
   display: flex;
   flex: 1;
   align-items: center;
@@ -36,16 +36,16 @@
   margin: 0 0 0.5rem;
 }
 
-.dotw p span {
+.columns.dotw p span {
   font-size: 16px;
 }
 
-.dotw p strong {
+.columns.dotw p strong {
   font-size: 32px;
 }
 
 
-.promo .button-container a {
+.columns.promo .button-container a {
   position: relative;
   display: block;
   width: 100%;
@@ -56,7 +56,7 @@
 }
 
 
-.promo .button-container a:hover::after {
+.columns.promo .button-container a:hover::after {
   position: absolute;
   content: '';
   bottom: 0;
@@ -74,55 +74,51 @@
     gap: 32px;
   }
 
-  .promo>div {
-    gap: 0;
-  }
-
   .columns>div>div {
     flex: 1;
     order: unset;
   }
 
-  .dotw {
+  .columns.dotw {
     padding: 1rem;
     margin-block: 1rem;
   }
 
-  .dotw p {
+  .columns.dotw p {
     margin: 1rem 0;
   }
 
-  .dotw p span {
+  .columns.dotw p span {
     font-size: 28px;
   }
 
-  .dotw p strong {
+  .columns.dotw p strong {
     font-size: 56px;
   }
 
-
-  .promo {
+  .columns.promo {
     border-bottom: 1px solid #f5f5f0;
     margin-bottom: 2rem;
   }
 
-  
+  .columns.promo>div {
+    gap: 0;
+  }
 
-  .promo .button-container {
+  .columns.promo .button-container {
     flex: auto;
   }
 
-
-  .promo .button-container a::after {
+  .columns.promo .button-container a::after {
     position: absolute;
     content: '';
     width: 1px;
     height: 60%;
-    background-color: rgba(50 50 100 50%);
+    background-color: #32326477;
     right: 0;
   }
 
-  .promo .button-container:last-child a::after {
+  .columns.promo .button-container:last-child a::after {
     width: 0;
   }
 }
